--- a/tentang.html
+++ b/tentang.html
@@ -37,7 +37,7 @@
         <div class="about-content">
             <div style="justify-content: center;display: flex;">
 
-                <img src="Mentahan/logo.png" width="100%">
+                <img src="Mentahan/logo.png" width="30%">
             </div>
             <h1 class="heading">Tentang <span>BOMA</span></h1>
             <p>Badan Olahraga Mahasiswa atau BOMA
@@ -56,14 +56,32 @@
         <h1 style="background-color:red; text-align: center;">VISI & MISI</h1>
         <h2><span> Visi : </span></h2>
                 <p>Menjadikan organisasi yang SEHAT</p>
-
-               <h2><span> Misi: </span></h2>
-                <p><span>S</span> = Silaturahmi yang terjaga antara anggota, pengurus, demisioner. </p>
-                <p><span>E</span> = Efektifnya komunikasi antar anggota dan pengurus</p>
-                <p><span>H</span> = Harus sabar dan ikhlas melakukan segalanya</p>
-                <p><span>A</span> = Aktifnya anggota dan pengurus dalam kegiatan BOMA maupun pertandingan yang ada</p>
-                <p><span>T</span> = Terciptanya kesehatan mental yang baik</p>
+                <h2><span> Misi: </span></h2>
+            <p>
+                <table>
+                    <tr>
+                        <td><span>S</span> =</td>
+                        <td>Silaturahmi yang terjaga antara anggota, pengurus, demisioner.</td>
+                    </tr>
+                    <tr>
+                        <td><span>E</span> =</td>
+                        <td>Efektifnya komunikasi antar anggota dan pengurus.</td>
+                    </tr>
+                    <tr>
+                        <td><span>H</span> =</td>
+                        <td>Harus sabar dan ikhlas melakukan segalanya.</td>
+                    </tr>
+                    <tr>
+                        <td><span>A</span> =</td>
+                        <td>Aktifnya anggota dan pengurus dalam kegiatan BOMA maupun pertandingan yang ada.</td>
+                    </tr>
+                    <tr>
+                        <td><span>T</span> =</td>
+                        <td>Terciptanya kesehatan mental yang baik.</td>
+                    </tr>
+                </table>
         
+            </p>
     </div>
 
     <div class="struktur-BOMA">
