--- a/Berita.html
+++ b/Berita.html
@@ -28,10 +28,135 @@
             <a href="Berita.html" class="active">Berita & Informasi</a>
             <a href="https://shorturl.at/hrnKG">Media Partner</a>
         </nav>
+    </header>
+
+    <section class="berita" id="berita">
+        <h2 class="heading">Berita & Informasi</h2>
+    </div>
+
+    <div class="berita-container" style="margin-top: 20px;">
+
+        <div class="berita-box">
+            <img src="Isi konten/Poster/11.png">
+            <div class="berita-layer">
+                <h4>Selamat Hari Idul Adha</h4>
+                <p>Di unggah pada 16 Juni 2024</p>
+                <a href="16juni.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+        <div class="berita-box">
+            <img src="Isi konten/Oprec/panitia pilder/FEEDS BOMA 24.png">
+            <div class="berita-layer">
+                <h4>Recruitment Panitia Piala Direktur</h4>
+                <p>Di unggah pada 15 Juni 2024</p>
+                <a href="15juni.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+        <div class="berita-box">
+            <img src="Isi konten/Poster/17.png">
+            <div class="berita-layer">
+                <h4>Selamat Hari Pancasila</h4>
+                <p>Di unggah pada 1 Juni 2024</p>
+                <a href="1juni.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+                <div class="berita-box">
+            <img src="Isi konten/Poster/9.png">
+            <div class="berita-layer">
+                <h4>Selamat Hari Raya Waisak</h4>
+                <p>Di unggah pada 23 Mei 2024</p>
+                <a href="23mei.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+        <div class="berita-box">
+            <img src="Isi konten/Poster/18.png">
+            <div class="berita-layer">
+                <h4>Memperingati Kenaikan Isa Almasih</h4>
+                <p>Di unggah pada 9 Mei 2024</p>
+                <a href="9mei.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+        <div class="berita-box">
+            <img src="Isi konten/Poster/19.png">
+            <div class="berita-layer">
+                <h4>Selamat Hari Pendidikan Nasional</h4>
+                <p>Di unggah pada 2 Mei 2024</p>
+                <a href="2mei.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+        <div class="berita-box">
+            <img src="Isi konten/Poster/10.png">
+            <div class="berita-layer">
+                <h4>Selamat Hari Buruh</h4>
+                <p>Di unggah pada 1 Mei 2024</p>
+                <a href="1mei.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+        <div class="berita-box">
+            <img src="Isi konten/Poster/16.png">
+            <div class="berita-layer">
+                <h4>Selamat Hari Kartini</h4>
+                <p>Di unggah pada 21 April 2024</p>
+                <a href="21april.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+                <div class="berita-box">
+            <img src="Isi konten/Poster/12.png">
+            <div class="berita-layer">
+                <h4>Selamat Hari Raya Idul Fitri</h4>
+                <p>Di unggah pada 9 April 2024</p>
+                <a href="9april.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+        <div class="berita-box">
+            <img src="Isi konten/Poster/13.png">
+            <div class="berita-layer">
+                <h4>Memperingati Wafatnya Isa Al Masih</h4>
+                <p>Di unggah pada 29 Maret 2024</p>
+                <a href="29maret.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+        <div class="berita-box">
+            <img src="Isi konten/Poster/7.png">
+            <div class="berita-layer">
+                <h4>Selamat Menunaikan Ibadah Puasa</h4>
+                <p>Di unggah pada 11 Maret 2024</p>
+                <a href="11maret.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+        <div class="berita-box">
+            <img src="Isi konten/Pelantikan/cover.jpeg">
+            <div class="berita-layer">
+                <h4>Pelantikan Pengurus BOMA 2024</h4>
+                <p>Di unggah pada 2 Maret 2024</p>
+                <a href="2maret.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+        <div class="berita-box">
+            <img src="Isi konten/Poster/14.png">
+            <div class="berita-layer">
+                <h4>Memperingati Isra Mi'raj</h4>
+                <p>Di unggah pada 8 Februari 2024</p>
+                <a href="8februari.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+    </section>
 
 
-        
-        <!-- custom js -->
-        <script src="js/script.js"></script>
+    <!-- custom js -->
+    <script src="js/script.js"></script>
+</body>
 
 </html>
