--- a/15juni.html
+++ b/15juni.html
@@ -39,39 +39,45 @@
 
                 <img src="Isi konten/Oprec/panitia pilder/1.jpeg" width="30%">
             </div>
-            <h1 class="heading">Recruitment Panitia Piala Direktur</h1> 
+            <h1 class="heading">Recruitment Panitia Piala Direktur</h1>
 
-        <p>Hallo Assalamualaikum Akang Teteh semua👋🏻</p>
+            <p>Hallo Assalamualaikum Akang Teteh semua👋🏻</p>
             <p>
-                Dalam rangka untuk menyalurkan minat, bakat, dan potensi Mahasiswa 
-                Kampus UPI Cibiru, maka Badan Olahraga Mahasiswa ingin mengajak akang/teteh 
-                cibiru untuk ikut berkontribusi dalam program kerja PILDER (Piala Direktur) 
+                Dalam rangka untuk menyalurkan minat, bakat, dan potensi Mahasiswa
+                Kampus UPI Cibiru, maka Badan Olahraga Mahasiswa ingin mengajak akang/teteh
+                cibiru untuk ikut berkontribusi dalam program kerja PILDER (Piala Direktur)
                 tahun 2024‼️ untuk informasi selanjutnya dibawah ini ya👇🏻
             </p>
             <h2>TIMELINE PENDAFTARAN</h2>
-                <p> - Pendaftaran:  19 - 21 Juni 2024</p>
-                <p>- Pengumuman: 22 Juni 2024</p>
+            <p> - Pendaftaran: 19 - 21 Juni 2024</p>
+            <p>- Pengumuman: 22 Juni 2024</p>
 
-                <h2>SYARAT DAN KETENTUAN:</h2>
-                <p>1. Mahasiswa Aktif Kampus Cibiru 2021 - 2023</p>
-                <p>2. Mampu bekerja dalam tim</p>
-                <p>3. Siap berkontribusi dan berkomitmen hingga program kerja berakhir</p>
+            <h2>SYARAT DAN KETENTUAN:</h2>
+            <p>1. Mahasiswa Aktif Kampus Cibiru 2021 - 2023</p>
+            <p>2. Mampu bekerja dalam tim</p>
+            <p>3. Siap berkontribusi dan berkomitmen hingga program kerja berakhir</p>
 
-                <h2>GRAND DESAIN</h2>
-                <p>Grand desain akang teteh bisa lihat dibawah ini ya!</p>
-                    <a href="Isi konten/Oprec/Grand Design PILDER 2024 (OPREC).pdf" class="btn">Grand Desain</a>
+            <h2>GRAND DESAIN</h2>
+            <p>Grand desain akang teteh bisa lihat dibawah ini ya!</p>
+            <a href="Isi konten/Oprec/Grand Design PILDER 2024 (OPREC).pdf" class="btn-tentang">Grand Desain</a>
 
-                <h2>PENDAFTARAN</h2>
-                <p>Untuk pendaftaran bisa melalui tombol dibawah ini.</p>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSc7kYYLw_2FnWK2knMFpth5cs-20dJx7ECQ-VD5x1L6tHcsUg/viewform" class="btn">Daftar Sekarang</a>
-                <p>Kami tunggu kontribusi akang teteh di Piala Direktur 2024🥰</p>
+            <h2>PENDAFTARAN</h2>
+            <p>Untuk pendaftaran bisa melalui tombol dibawah ini.</p>
+            <div class="btn-container">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSc7kYYLw_2FnWK2knMFpth5cs-20dJx7ECQ-VD5x1L6tHcsUg/viewform"
+                    class="btn-tentang">Daftar Sekarang</a>
+            </div>
+            <p>Kami tunggu kontribusi akang teteh di Piala Direktur 2024🥰</p>
 
-                <h2>CP :</h2>
-                <a href="https://wa.link/md02es" class="btn">Bilal</a>
-                <a href="https://wa.link/6frmgf" class="btn">Keyla</a>
+            <p>CP :</p>
+            <div class="btn-container">
+                <a href="https://wa.link/md02es" class="btn-tentang">Bilal</a>
+                <a href="https://wa.link/6frmgf" class="btn-tentang">Keyla</a>
+            </div>
+
     </section>
-            <!-- custom js -->
-            <script src="js/script.js"></script>
-        </body>
-        
-        </html>
+    <!-- custom js -->
+    <script src="js/script.js"></script>
+</body>
+
+</html>
