--- a/2maret.html
+++ b/2maret.html
@@ -33,33 +33,40 @@
 
     <!-- slider -->
     <div class="slider">
-        <figure class="fig">
-            <div class="slide">
+        <figure class="fig-pelantikan">
+            <div class="slide-pelantikan">
                 <img src="Isi konten/Pelantikan/1.jpg" width="100%">
             </div>
-            <div class="slide">
+            <div class="slide-pelantikan">
                 <img src="Isi konten/Pelantikan/2.jpg" width="100%">
             </div>
-            <div class="slide">
+            <div class="slide-pelantikan">
                 <img src="Isi konten/Pelantikan/3.JPG" width="100%">
             </div>
-            <div class="slide">
+            <div class="slide-pelantikan">
                 <img src="Isi konten/Pelantikan/4.JPG" width="100%">
-            <div class="slide">
+            </div>
+            <div class="slide-pelantikan">
                 <img src="Isi konten/Pelantikan/5.JPG" width="100%">
             </div>
-            <div class="slide">
+            <div class="slide-pelantikan">
+                <img src="Isi konten/Pelantikan/6.JPG" width="100%">
+            </div>
+            <div class="slide-pelantikan">
+                <img src="Isi konten/Pelantikan/7.JPG" width="100%">
+            </div>
+            <div class="slide-pelantikan">
                 <img src="Isi konten/Pelantikan/8.JPG" width="100%">
             </div>
-            <div class="slide">
+            <div class="slide-pelantikan">
                 <img src="Isi konten/Pelantikan/9.JPG" width="100%">
             </div>
-            <div class="slide">
+            <div class="slide-pelantikan">
                 <img src="Isi konten/Pelantikan/10.JPG" width="100%">
         </figure>
     </div>
-        <!-- custom js -->
-        <script src="js/script.js"></script>
+    <!-- custom js -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
