--- a/Berita.html
+++ b/Berita.html
@@ -36,6 +36,24 @@
 
     <div class="berita-container" style="margin-top: 20px;">
 
+     <div class="berita-box">
+            <img src="Isi konten/Poster/20.png">
+            <div class="berita-layer">
+                <h4>Memperingati Maulid Nabi Muhammad SAW</h4>
+                <p>Di unggah pada 16 September 2024</p>
+                <a href="16september.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
+        <div class="berita-box">
+            <img src="Isi konten/Oprec/oprek anggota boma.png">
+            <div class="berita-layer">
+                <h4>Open Recruitment Anggota BOMA</h4>
+                <p>Di unggah pada 14 September 2024</p>
+                <a href="14september.html"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+
         <div class="berita-box">
             <img src="Isi konten/Poster/11.png">
             <div class="berita-layer">
